# Geological-Chip-Tray-Compartment-Extractor

./: Chip Tray Photo Processor V2.py  Chip Tray Photo Processor.py  FINAL.py  TraceGen_BlurDetect.py  config.json  main.py  pyproject.toml  translations.csv  version.txt
archive/: Chip Tray Photo Processor.py
core/: __init__.py  config_manager.py  file_manager.py  repo_updater.py  tesseract_manager.py  translator.py
gui/: __init__.py  update_dialog.py
processing/: __init__.py
resources/: __init__.py  translations.csv
