[project]
name = "GeoVue"
version = "2.0.2"
description = "Chip Tray Photo Processor"
requires-python = ">=3.7"

dependencies = [
    "numpy",
    "opencv-python",
    "pillow",
    "pandas",
    "openpyxl",
    "piexif>=1.1.3",
    "requests"
]

[project.scripts]
chiptray = "main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}  # tells setuptools where to find the actual Python packages
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"resources" = ["*.png", "*.csv", "*.ico", "*.json", "color_presets/*.json"]
